kubernetes/ingress-ingress-opensearch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ingress-opensearch","namespace":"utilities"},"spec":{"rules":[{"host":"elasticserver.doitsu.tech","http":{"paths":[{"backend":{"service":{"name":"opensearch-cluster-master","port":{"number":9200}}},"path":"/","pathType":"Prefix"}]}},{"host":"kibana.doitsu.tech","http":{"paths":[{"backend":{"service":{"name":"opensearch-dashboard-opensearch-dashboards","port":{"number":5601}}},"path":"/","pathType":"P [...]
  creationTimestamp: "2022-03-27T06:25:18Z"
  generation: 2
  name: ingress-opensearch
  namespace: utilities
  resourceVersion: "282328"
  selfLink: /apis/networking.k8s.io/v1/namespaces/utilities/ingresses/ingress-opensearch
  uid: 6bc4e845-5ef4-4a8b-b62d-1cff82425ed3
spec:
  ingressClassName: public
  rules:
  - host: elasticserver.doitsu.tech
    http:
      paths:
      - backend:
          service:
            name: opensearch-cluster-master
            port:
              number: 9200
        path: /
        pathType: Prefix
  - host: kibana.doitsu.tech
    http:
      paths:
      - backend:
          service:
            name: opensearch-dashboard-opensearch-dashboards
            port:
              number: 5601
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
